feat: change cors config